--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FIRsystem
 
 spring.datasource.name =com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/efir
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=8999617581@Sh
