--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=FIRsystem
 
 spring.datasource.name =com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/efir
+spring.datasource.url=jdbc:mysql://localhost:3306/FIR
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=8999617581@Sh
+spring.datasource.password=vivek9941
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=always
 
-
+#
 #groq.api.key=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
 #groq.api.url=https://api.groq.com/v1/chat/completions
 #groq.api.model=llama-3.3-70b-versatile
