--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=always
 
 #
-#groq.api.key=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
-#groq.api.url=https://api.groq.com/v1/chat/completions
-#groq.api.model=llama-3.3-70b-versatile
-#
+groq.api.key=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
+groq.api.url=https://api.groq.com/v1/chat/completions
+groq.api.model=llama-3.3-70b-versatile
+
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
 #spring.mail.username=vivekmane3306@gmail.com
