fetching complaint for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ groq.api.key=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
 groq.api.url=https://api.groq.com/v1/chat/completions
 groq.api.model=llama-3.3-70b-versatile
 
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=vivekmane3306@gmail.com
-#spring.mail.password=dexv sdvf jhsj ecut
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vivekmane3306@gmail.com
+spring.mail.password=dexv sdvf jhsj ecut
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
