--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=FIRsystem
 
 spring.datasource.name =com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/FIR
+spring.datasource.url=jdbc:mysql://localhost:3306/efir
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=vivek9941
+spring.datasource.password=8999617581@Sh
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=always
 
@@ -19,3 +19,5 @@ spring.mail.username=vivekmane3306@gmail.com
 spring.mail.password=dexv sdvf jhsj ecut
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret="eA7S1nVl3pC8Hjk2mL9FQvX4T6YpJqW8rMbGzKdY5N0="
