Spring Security and JWT Authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,13 @@ groq.api.model=llama-3.3-70b-versatile
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vivekmane3306@gmail.com
+spring.mail.username=vivekmane3306@gmail.com]
 spring.mail.password=dexv sdvf jhsj ecut
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.secret="eA7S1nVl3pC8Hjk2mL9FQvX4T6YpJqW8rMbGzKdY5N0="
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
