--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.name =com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/efir
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=8999617581@Sh
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=vivek9941
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=always
 
 #
