--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.secret="eA7S1nVl3pC8Hjk2mL9FQvX4T6YpJqW8rMbGzKdY5N0="
 
 spring.cache.type=redis
-#spring.redis.host=localhost
-#spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.port=6379
