Deployment Process Initiated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.name =com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/efir
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=8999617581@Sh
+spring.datasource.password=899961
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=always
 
@@ -23,5 +23,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.secret="eA7S1nVl3pC8Hjk2mL9FQvX4T6YpJqW8rMbGzKdY5N0="
 
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
