Deployment Process Initiated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,6 @@ spring.cache.type=redis
 spring.data.redis.host=redis-13987.c258.us-east-1-4.ec2.redns.redis-cloud.com
 spring.data.redis.port=13987
 spring.data.redis.username=default
-spring.data.redis.password=TV2p8fvgpha9agmgKxrLnNIVsjHbPhzI
+spring.data.redis.password=shTV2p8fvgpha9agmgKxrLnNIVsjHbPhzIri
+spring.data.redis.ssl.enabled=true
+
